--- a/Analise.html
+++ b/Analise.html
@@ -33,53 +33,36 @@
 
 <script>
 async function gerar() {
-  const cliente = document.getElementById("cliente").value.trim();
-  const modelo  = document.getElementById("modelo").value.trim();
-  const file    = document.getElementById("fileInput").files[0];
+  // ... (envio do FormData igual ao que já está)
 
-  if (!file) { alert("Selecione um arquivo .xlsx"); return; }
-
-  const fd = new FormData();
-  fd.append("cliente", cliente);
-  fd.append("modelo", modelo);
-  fd.append("relatorio", file);
-
-  const resp = await fetch("/api/analisar", { method:"POST", body: fd });
-  if (!resp.ok) {
-    const t = await resp.text().catch(()=> "");
-    alert("Falha na análise: " + t);
-    return;
-  }
-  const data = await resp.json();
+  const data = await (await fetch("/api/analisar", { method:"POST", body: fd })).json();
 
   document.getElementById("relatorio").style.display = "block";
   document.getElementById("titulo").textContent =
     `📊 Análise do Relatório de Telemetria – ${data.meta.modelo || "Equipamento"}`;
   const per = data.meta.periodo;
   document.getElementById("subtitulo").textContent =
-    `Cliente: ${data.meta.cliente || "N/D"}  |  Período: ${per?.inicio || "N/D"} → ${per?.fim || "N/D"}`;
+    `Cliente: ${data.meta.cliente || "N/D"}  |  Período: ${per?.inicio || "N/D"} → ${per?.fim || "N/D"}  |  Registros: ${data.meta.totalFrames}`;
 
-  // Monta as seções detalhadas (sempre presentes)
+  // >>> render dinâmico: percorre data.sections (array)
   const host = document.getElementById("texto-secoes");
   host.innerHTML = "";
-  const order = ["carga","consumo","deslizamento","velocidade","resumo"];
-  order.forEach(key => {
-    const sec = data.sections?.[key];
-    if (!sec) return;
+  (data.sections || []).forEach(sec => {
     const h3 = document.createElement("h3");
-    h3.textContent = sec.title || key;
+    h3.textContent = sec.title;
     host.appendChild(h3);
-    const ul = document.createElement("ul");
-    (sec.bullets || []).forEach(b => {
-      const li = document.createElement("li");
-      li.textContent = b;
-      ul.appendChild(li);
-    });
-    host.appendChild(ul);
+    if (sec.bullets?.length) {
+      const ul = document.createElement("ul");
+      sec.bullets.forEach(b => {
+        const li = document.createElement("li");
+        li.textContent = b;
+        ul.appendChild(li);
+      });
+      host.appendChild(ul);
+    }
   });
 
-  // Texto completo (se a OpenAI respondeu)
-  document.getElementById("analise").textContent =
-    data.analysis || "—";
+  document.getElementById("analise").textContent = data.analysis || "—";
 }
 </script>
+
