--- a/Analise.html
+++ b/Analise.html
@@ -6,6 +6,18 @@
 <title>Agro Divel • Análise de Telemetria</title>
 <meta name="theme-color" content="#001439" />
 <style>
+
+  .section{
+  background:#fff;border-radius:16px;border:1px solid #eef2f7;padding:16px;box-shadow:var(--shadow);
+  display:grid;grid-template-columns:1fr 260px;gap:14px;align-items:center;
+}
+@media (max-width:720px){ .section{grid-template-columns:1fr} }
+.section h3{margin:0 0 8px;font-size:16px;color:#0f172a}
+.section ul{margin:0;padding-left:18px}
+.section li{margin:6px 0;line-height:1.5}
+.section .spark img{width:100%;height:auto;border-radius:12px;display:block}
+
+  
   :root{
     --bg:#f5f7fb;
     --card:#ffffff;
@@ -256,3 +268,4 @@
 </script>
 </body>
 </html>
+
