--- a/Dashboardplanosvigentes.html
+++ b/Dashboardplanosvigentes.html
@@ -1210,6 +1210,8 @@ function formatarDataBR(data) {
       <label><input type="checkbox" class="checklistNovoPlano" value="600" /> 600</label>
       <label><input type="checkbox" class="checklistNovoPlano" value="900" /> 900</label>
       <label><input type="checkbox" class="checklistNovoPlano" value="1200" /> 1200</label>
+      <label><input type="checkbox" class="checklistNovoPlano" value="Server+" /> Server+</label>
+      <label><input type="checkbox" class="checklistNovoPlano" value="Lastragem" /> Lastragem</label>
     </div>
 
     <div style="display:flex;gap:10px;align-items:center;margin-bottom:10px;">
