--- a/maquinasparadas.html
+++ b/maquinasparadas.html
@@ -159,12 +159,13 @@
         <label for="novo-motivo">Máquina Parada Por*</label>
         <input type="text" id="novo-motivo" list="motivos-sugeridos" oninput="verificarMotivoPecas(this.value)">
         <datalist id="motivos-sugeridos">
-            <option value="Peças"></option>
-            <option value="Técnico"></option>
-            <option value="Cliente"></option>
-            <option value="Garantia"></option>
-            <option value="Manutenção Preventiva"></option>
-            <option value="Outros"></option>
+            <option value="THD"></option>
+            <option value="APROVAÇÃO DO SEGURO"></option>
+            <option value="PEÇAS"></option>
+            <option value="APROVAÇÃO CLIENTE"></option>
+            <option value="FALTA FERRAMENTAS"></option>
+            <option value="SERVIÇOS DE TERCEIROS"></option>
+            <option value="INDISPONIBILIDADE DE TÉCNICO"></option>
         </datalist>
         
         <div id="campo-curva-peca">
@@ -175,6 +176,7 @@
                 <option value="B">B</option>
                 <option value="C">C</option>
                 <option value="D">D</option>
+                <option value="E">E</option>
             </select>
         </div>
 
@@ -429,3 +431,4 @@
 
 </body>
 </html>
+
