--- a/menu-manutencoes.html
+++ b/menu-manutencoes.html
@@ -213,6 +213,11 @@
         <i class="fas fa-clipboard-list"></i>
         <p>Dashboard Servicos</p>
       </a>
+
+      <a href="maquinasparadas.html" class="card">
+        <i class="fa-solid fa-hand"></i>
+        <p>Máquinas Paradas</p>
+      </a>
       
     </div>
   </div>
@@ -350,6 +355,5 @@
 
 </body>
 </html>
-
 
 
