--- a/maquinasparadas.html
+++ b/maquinasparadas.html
@@ -163,12 +163,14 @@
         <label for="novo-motivo">Máquina Parada Por*</label>
         <input type="text" id="novo-motivo" list="motivos-sugeridos" oninput="verificarMotivoPecas(this.value)">
         <datalist id="motivos-sugeridos">
-            <option value="Peças"></option>
-            <option value="Técnico"></option>
-            <option value="Cliente"></option>
-            <option value="Garantia"></option>
-            <option value="Manutenção Preventiva"></option>
-            <option value="Outros"></option>
+            <option value="THD"></option>
+            <option value="APROVAÇÃO SEGURO"></option>
+            <option value="PEÇAS"></option>
+            <option value="APROVAÇÃO DO CLIENTE"></option>
+            <option value="FERRAMENTAS"></option>
+            <option value="SERVIÇOS DE TERCEIRO"></option>
+            <option value="GARANTIA"></option>
+            <option value="INDISPONIBILIDADE DE TÉCNICO"></option>
         </datalist>
         
         <div id="campo-curva-peca">
@@ -179,6 +181,7 @@
                 <option value="B">B</option>
                 <option value="C">C</option>
                 <option value="D">D</option>
+                <option value="E">E</option>
             </select>
         </div>
 
