--- a/controle_estoque.html
+++ b/controle_estoque.html
@@ -43,7 +43,21 @@
         .sobra-estoque { background-color: #2c4a3b !important; }
         .falta-estoque { background-color: #4a2c2c !important; }
         .modal { display: none; position: fixed; z-index: 1000; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.7); justify-content: center; align-items: center; backdrop-filter: blur(5px); }
-        .modal-content { background-color: #2c2f3f; padding: 25px; border-radius: 12px; width: 95%; max-width: 900px; box-shadow: 0 5px 15px rgba(0,0,0,0.5); display: flex; flex-direction: column; gap: 20px; border: 1px solid #444; }
+        .modal-content {
+            background-color: #2c2f3f;
+            padding: 25px;
+            border-radius: 12px;
+            width: 95%;
+            max-width: 900px;
+            box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            border: 1px solid #444;
+            /* --- ADICIONE ESTAS DUAS LINHAS --- */
+            max-height: 85vh; /* Limita a altura a 85% da altura da tela */
+            overflow-y: auto; /* Adiciona rolagem vertical se necessário */
+        }
         .modal-header { display: flex; justify-content: space-between; align-items: center; border-bottom: 1px solid #444; padding-bottom: 10px; }
         .modal-header h3 { margin: 0; font-size: 20px; }
         .close-button { cursor: pointer; font-size: 28px; font-weight: bold; transition: color 0.2s; }
@@ -94,6 +108,7 @@
         <div class="content">
             <div id="loader-overlay"><div style="margin: auto;">Carregando dados...</div></div>
             <div class="filters">
+                <input type="text" id="filtro-data" placeholder="Selecione o período">
                 <input id="filtro-codigo" type="text" placeholder="Buscar código..." />
                 <input id="filtro-descricao" type="text" placeholder="Buscar descrição..." />
                 <select id="filtro-status">
@@ -102,7 +117,6 @@
                     <option value="sobra">Sobra de Estoque (+)</option>
                     <option value="falta">Falta de Estoque (-)</option>
                 </select>
-                <input type="text" id="filtro-data" placeholder="Selecione o período">
                 <div class="acoes-topo">
                     <button class="btn-acao" id="btn-download-modelo" title="Baixar modelo"><i data-lucide="download"></i></button>
                     <label for="file-input" class="btn-acao" title="Carregar Planilha"><i data-lucide="upload"></i></label>
@@ -125,7 +139,12 @@
             <div class="modal-header"><h3>Análise de Item</h3><span class="close-button">&times;</span></div>
             <div id="analise-info"></div>
             <div id="analise-kpis"></div>
-            <div><canvas id="analise-grafico"></canvas></div>
+            
+            <!-- MODIFICAÇÃO AQUI: Adicione um div ao redor do canvas -->
+            <div id="grafico-container" style="position: relative; height: 300px;">
+                <canvas id="analise-grafico"></canvas>
+            </div>
+            
             <div id="analise-tabela-container"></div>
         </div>
     </div>
@@ -475,7 +494,7 @@
 
             const analiseInfo = document.getElementById('analise-info');
             const analiseKpis = document.getElementById('analise-kpis');
-            const analiseTabela = document.getElementById('analise-tabela-container');
+            const analiseTabelaContainer = document.getElementById('analise-tabela-container'); // Corrigido para pegar o container da tabela
 
             analiseInfo.innerHTML = `
                 <p><strong>Código:</strong> ${item.info.codigoOriginal}</p>
@@ -483,6 +502,7 @@
                 <p><strong>Prateleira:</strong> ${item.info.prateleira}</p>
             `;
 
+            // Ordena o histórico do mais antigo para o mais recente para o gráfico e KPIs
             const historico = item.historico.sort((a, b) => {
                 const [da, ma, aa] = a.data.split('/').map(Number);
                 const [db, mb, ab] = b.data.split('/').map(Number);
@@ -490,7 +510,7 @@
             });
 
             const totalRegistros = historico.length;
-            const ultimoRegistro = historico[historico.length - 1];
+            const ultimoRegistro = historico[historico.length - 1]; // Pega o registro mais recente
             const diferencaAtual = ultimoRegistro.estoqueContado - ultimoRegistro.estoqueSistema;
             const mediaEstoqueSistema = (historico.reduce((sum, h) => sum + h.estoqueSistema, 0) / totalRegistros).toFixed(1);
 
@@ -509,7 +529,16 @@
                 </div>
             `;
 
+            // --- INÍCIO DA SEÇÃO DA TABELA DE HISTÓRICO ---
+            // Ordena o histórico do mais recente para o mais antigo para exibição na tabela
+            const historicoParaTabela = [...historico].sort((a, b) => {
+                const [da, ma, aa] = a.data.split('/').map(Number);
+                const [db, mb, ab] = b.data.split('/').map(Number);
+                return new Date(ab, mb - 1, db) - new Date(aa, ma - 1, da);
+            });
+
             let tabelaHtml = `
+                <h4 style="margin-top: 20px; margin-bottom: 10px; color: #ccc;">Últimos Registros</h4>
                 <table style="width: 100%; border-collapse: collapse; background-color: #2c2f3f; border-radius: 8px; overflow: hidden;">
                     <thead>
                         <tr style="background-color: #ffffff; color: #00205b;">
@@ -522,7 +551,7 @@
                     <tbody>
             `;
 
-            historico.forEach(h => {
+            historicoParaTabela.forEach(h => {
                 const diff = h.estoqueContado - h.estoqueSistema;
                 const rowClass = diff > 0 ? 'sobra-estoque' : diff < 0 ? 'falta-estoque' : '';
                 tabelaHtml += `
@@ -536,50 +565,52 @@
             });
 
             tabelaHtml += '</tbody></table>';
-            analiseTabela.innerHTML = tabelaHtml;
+            analiseTabelaContainer.innerHTML = tabelaHtml;
+            // --- FIM DA SEÇÃO DA TABELA DE HISTÓRICO ---
 
+            // --- INÍCIO DA SEÇÃO DO GRÁFICO DE PIZZA ---
             const ctx = document.getElementById('analise-grafico').getContext('2d');
             if (graficoAnalise) {
                 graficoAnalise.destroy();
             }
 
             graficoAnalise = new Chart(ctx, {
-                type: 'line',
+                type: 'pie', // MUDANÇA: tipo de gráfico para 'pie'
                 data: {
-                    labels: historico.map(h => h.data),
+                    labels: ['Estoque Sistema', 'Estoque Contado'],
                     datasets: [{
-                        label: 'Estoque Sistema',
-                        data: historico.map(h => h.estoqueSistema),
-                        borderColor: '#36a2eb',
-                        backgroundColor: 'rgba(54, 162, 235, 0.1)',
-                        tension: 0.1
-                    }, {
-                        label: 'Estoque Contado',
-                        data: historico.map(h => h.estoqueContado),
-                        borderColor: '#ff6384',
-                        backgroundColor: 'rgba(255, 99, 132, 0.1)',
-                        tension: 0.1
+                        label: 'Comparativo de Estoque (Último Registro)',
+                        // Usando os dados do último registro para o gráfico de pizza
+                        data: [ultimoRegistro.estoqueSistema, ultimoRegistro.estoqueContado],
+                        backgroundColor: [
+                            '#36a2eb', // Cor para 'Estoque Sistema'
+                            '#ff6384'  // Cor para 'Estoque Contado'
+                        ],
+                        borderColor: '#2c2f3f',
+                        borderWidth: 2
                     }]
                 },
                 options: {
                     responsive: true,
+                    maintainAspectRatio: false, // Permite que o gráfico se ajuste melhor ao container
                     plugins: {
                         legend: {
-                            labels: { color: 'white' }
-                        }
-                    },
-                    scales: {
-                        x: {
-                            ticks: { color: 'white' },
-                            grid: { color: 'rgba(255, 255, 255, 0.1)' }
+                            position: 'top', // Posição da legenda
+                            labels: { 
+                                color: 'white',
+                                font: { size: 14 }
+                            }
                         },
-                        y: {
-                            ticks: { color: 'white' },
-                            grid: { color: 'rgba(255, 255, 255, 0.1)' }
+                        title: { // Adiciona um título ao gráfico
+                            display: true,
+                            text: `Análise do dia ${ultimoRegistro.data}`,
+                            color: 'white',
+                            font: { size: 16 }
                         }
                     }
                 }
             });
+            // --- FIM DA SEÇÃO DO GRÁFICO DE PIZZA ---
 
             analiseModal.style.display = 'flex';
         }
