--- a/controle_ferramentas.html
+++ b/controle_ferramentas.html
@@ -89,7 +89,7 @@
 
     <header>
         <div class="header-content">
-            <img src="https://via.placeholder.com/150x50.png?text=SUA+LOGO" alt="Logo" class="logo">
+            <img src="assets/logo.png" alt="Logo" class="logo">
             <div class="header-title">Controle de Ferramentas</div>
             <div style="width: 165px;"></div>
         </div>
